# opentdu

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
cmake_modules/: FindD3D9.cmake  ide_filters.cmake
source/: gs_cd_key.cpp  gs_cd_key.h  gs_pub.cpp  gs_pub.h  gs_timer.h  shared.h  tdu_instance.cpp  tdu_instance.h  x86_pointer_emulation.cpp  x86_pointer_emulation.h
source/ai/: ai_opponent.h  gs_ai.cpp  gs_ai.h
source/audio/: audio_device.cpp  audio_device.h  gs_ambiance.cpp  gs_ambiance.h  gs_audio.cpp  gs_audio.h  gs_vehicle_sound.cpp  gs_vehicle_sound.h
source/config/: audio.cpp  device.cpp  fx.cpp  game.cpp  gs_config.cpp  gs_config.h  physics.cpp  radio.cpp  replay.cpp  system.cpp
source/console/: gs_console.cpp  gs_console.h
source/core/: arg_parser.cpp  arg_parser.h  assert.h  color.h  ed_store.cpp  ed_store.h  event.cpp  event.h  locale.h  logger.cpp  logger.h  maths_helper.h  mutex.cpp  mutex.h  notifier.cpp  notifier.h  popup_callback.h  thread.cpp  thread.h  time.h
source/core/crypto/: tea.h
source/core/hash/: crc32.h  crc64.h  tdu_concat.h
source/core/random/: bcpl.h
source/database/: db_achievement.h  db_aftermarket_pack.h  db_bot.h  db_brand.h  db_car_color.h  db_car_pack.h  db_car_physics_data.h  db_car_rim.h  db_car_shop.h  db_clothe.h  db_hair.h  db_house.h  db_interior.h  db_menu.h  db_pnj.h  db_rim.h  db_subtitle.h  db_tutorial.h  gs_database.cpp  gs_database.h
source/debug/: gs_console.cpp  gs_console.h  gs_debug.cpp  gs_debug.h  gs_profile.cpp  gs_profile.h
source/filesystem/: bank.cpp  bank.h  file_handle.cpp  file_handle.h  file_path_register.cpp  file_path_register.h  gs_boot_datas.cpp  gs_boot_datas.h  gs_dirty_disk.cpp  gs_dirty_disk.h  gs_file.cpp  gs_file.h  streamed_resource.h  virtual_file_system.cpp  virtual_file_system.h
source/flash/: bank_common_flash.cpp  bank_common_flash.h  bank_flash.cpp  bank_flash.h  flash_entity.h  flash_list.cpp  flash_list.h  flash_player.cpp  flash_player.h  flash_resources.h  flash_sounds.cpp  flash_sounds.h  gps_voice.cpp  gps_voice.h  gs_flash.cpp  gs_flash.h  mng_fade.cpp  mng_fade.h  mng_flash.cpp  mng_flash.h  mng_flash_localize.cpp  mng_flash_localize.h  modal_message_box.cpp  modal_message_box.h  movie_player.h
source/game/: cinematic_entity.cpp  cinematic_entity.h  game_cheats.h  game_mechanism.cpp  game_mechanism.h  game_object.cpp  game_object.h  gm_base.cpp  gm_base.h  gm_video_bumper.cpp  gm_video_bumper.h  gs_base.cpp  gs_base.h  gs_cinematics.cpp  gs_cinematics.h  gs_intro_pool.cpp  gs_intro_pool.h  gs_subtitles.cpp  gs_subtitles.h  gs_tutorial.cpp  gs_tutorial.h  material_types.h  mng_base.cpp  mng_base.h  mng_bookmark.cpp  mng_bookmark.h  mng_hud.cpp  mng_hud.h  mng_video_bumper.cpp  mng_video_bumper.h
source/game/avatar/: gs_avatar.cpp  gs_avatar.h  gs_cloth_system.cpp  gs_cloth_system.h
source/game/camera/: gs_camera.cpp  gs_camera.h
source/game/car_showcase/: flash_list_car_showcase.cpp  flash_list_car_showcase.h  gm_car_showcase.cpp  gm_car_showcase.h  mng_flash_car_showcase.cpp  mng_flash_car_showcase.h
source/game/freeride/: gm_freeride.cpp  gm_freeride.h
source/game/login/: gm_login.cpp  gm_login.h
source/game/movie/: gm_video_bumper.cpp  gm_video_bumper.h  mng_movie.cpp  mng_movie.h
source/game/scenaric/: game_intro_tutorial.cpp  game_intro_tutorial.h  gs_scenaric.cpp  gs_scenaric.h
source/game/scene/: base_entity.cpp  base_entity.h  entity_actor.cpp
source/game/vehicle/: bank_vehicle.cpp  bank_vehicle.h  car_desc.cpp  car_desc.h  car_state.cpp  car_state.h  gs_brand_car.cpp  gs_brand_car.h  gs_car_colors.cpp  gs_car_colors.h  gs_car_common.cpp  gs_car_common.h  gs_car_display.cpp  gs_car_display.h  gs_car_state.cpp  gs_car_state.h  mng_car_alpha.cpp  mng_car_alpha.h  paint.h  vehicle_base.cpp  vehicle_base.h  vehicle_resource.h
source/input/: gs_device.cpp  gs_device.h
source/movie/: gs_movie.cpp  gs_movie.h  mng_movie.cpp  mng_movie.h
source/online/: gs_online.cpp  gs_online.h  packets_crc.h
source/physics/: collision_event.h  dynamic_rigid_body.h  engine_simulation.h  gs_physics.cpp  gs_physics.h  gs_physicsfx.cpp  gs_physicsfx.h  physics_factory.h
source/player_data/: gs_playerdata.cpp  gs_playerdata.h  gs_radio.cpp  gs_radio.h  save_game.cpp  save_game.h  save_game_manager.cpp  save_game_manager.h  saved_car_reserve.cpp  saved_car_reserve.h  saved_ebay_state.cpp  saved_garage.cpp  saved_garage.h  saved_profile.cpp  saved_profile.h  user_profile.cpp  user_profile.h
source/render/: 2db.cpp  2db.h  2dm.cpp  2dm.h  3dd.cpp  3dd.h  3dg.cpp  3dg.h  draw_list.cpp  draw_list.h  file_collection_2d.cpp  file_collection_2d.h  file_collection_3d.h  frame_graph.cpp  frame_graph.h  frustum.cpp  frustum.h  geometry_buffer.cpp  geometry_buffer.h  gs_noise.cpp  gs_noise.h  gs_render.cpp  gs_render.h  gs_render_helper.h  heightmap_renderer.cpp  heightmap_renderer.h  hiearchy_node.h  instance.cpp  instance.h  light.h  lod.h  material.cpp  material.h  mng_number.cpp  mng_number.h  mng_reflection.cpp  mng_reflection.h  mng_shadow.cpp  mng_shadow.h  render_buckets.cpp  (+22 more)
source/render/camera/: camera_base.cpp  camera_base.h  camera_game.cpp  camera_game.h  gs_camera.cpp  gs_camera.h  vehicle_cameras.cpp  vehicle_cameras.h
source/render/d3d9/: render_device.cpp  render_device.h
source/render/opengl/: render_device.cpp  render_device.h
source/render/postfx/: gs_postfx.cpp  (+9 more)
source/system/: gs_keyboard_pc.cpp  gs_keyboard_pc.h  gs_pc_options.cpp  gs_pc_options.h  gs_system.cpp  gs_system.h  system_shared.h  system_win32.cpp  system_win32.h
source/unix/: entry_point.cpp
source/win32/: entry_point.cpp
source/world/: gs_aircraft.cpp  gs_aircraft.h  gs_boat.cpp  gs_boat.h  gs_details.cpp  gs_details.h  gs_mng_resources.cpp  gs_mng_resources.h  gs_pedestrians.cpp  gs_pedestrians.h  gs_world.cpp  gs_world.h  gs_world_streaming.cpp  gs_world_streaming.h  world_listener.cpp  world_listener.h
tools/asset_extractor/: CMakeLists.txt  main.cpp
tools/save_decryptor/: CMakeLists.txt  main.cpp
(+59 files in other folders)
